refactor: use inline renovate annotations
Generic regex matches any formula with the comment:
  # renovate: datasource=github-releases depName=owner/repo

--- a/renovate.json
+++ b/renovate.json
@@ -4,12 +4,10 @@
   "customManagers": [
     {
       "customType": "regex",
-      "fileMatch": ["Formula/cwtch\\.rb$"],
+      "fileMatch": ["Formula/.+\\.rb$"],
       "matchStrings": [
-        "url \"https://github\\.com/agh/cwtch/archive/refs/tags/(?<currentValue>v[\\d.]+)\\.tar\\.gz\""
-      ],
-      "depNameTemplate": "agh/cwtch",
-      "datasourceTemplate": "github-releases"
+        "# renovate: datasource=(?<datasource>\\S+) depName=(?<depName>\\S+)\\s+url \"[^\"]*?(?<currentValue>v[\\d.]+)[^\"]*\""
+      ]
     }
   ]
 }
